# clip-synk

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: github-actions-precommit.yaml  release.yaml
clipshare/: __init__.py  __main__.py  cli.py  clipboard.py  config.py  gpg.py  models.py  sync.py  watcher.py
tests/: __init__.py
