# Copyright (c) 2026
[tool.poetry]
name = "clipshare"
version = "0.1.4"
description = "Synchronize the system clipboard across machines using a shared encrypted file."
authors = []
readme = "README.md"
packages = [{include = "clipshare"}]

[tool.poetry.dependencies]
python = "^3.10"
tomli = {version = "^2.0", python = "<3.11"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pre-commit = "^3.0"

[tool.poetry.scripts]
clipshare = "clipshare.cli:main"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
